kubernetes/algod-relay/mainnet-relay/de-4-mainnet-relay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: algo-set-service
  namespace: algo-relay-mainnet
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: algorand-relay-mainnet
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 4160
      nodePort: 4160
      targetPort: 4160
