kubernetes/algod-relay/mainnet-relay/de-4-mainnet-relay/ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: algorand-algod-protocol-service
  namespace: algo-relay-mainnet
spec:
  type: ClusterIP
  selector:
    app: algorand-relay-mainnet
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algorand-algod-public-ingress
  namespace: algo-relay-mainnet
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      proxy_set_header X-Algo-API-Token aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - algorand-algod-public.de-4.biatec.io
      secretName: tls-algorand-algod-public.de-4.biatec.io
  rules:
    - host: algorand-algod-public.de-4.biatec.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algorand-algod-protocol-service
                port:
                  number: 8080
